# aws-assume-role

./: .gitignore  .goreleaser.yaml  .releaserc.yaml  .semrelrc  Cargo.toml  Makefile  README.md  build.rs  copy-packages.sh  package-lock.json  package.json  renovate.json
.github/workflows/: pipeline.yml
src/: error.rs  main.rs  sts.rs
