[package]
name = "aws-assume-role"
description = "Assume aws sts role, save credentials to profile or print to stdout using shell export syntax"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = "1.1.9"
aws-sdk-sts = "1.18.0"
aws-smithy-http = "0.60.7"
chrono = "0.4.37"
clap = {version = "4.5.4", features=["derive"]}
dirs = "5.0.1"
rust-ini = "0.21.0"
thiserror = "1.0.58"
tokio = { version = "^1.37.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # remove dead code and often times reduces binary size
