[package]
name = "aws-assume-role"
description = "Assume aws sts role, save credentials to profile or print to stdout using shell export syntax"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = "1.0.0"
aws-sdk-sts = "1.0.0"
aws-smithy-http = "0.60.0"
chrono = "0.4.24"
clap = {version = "4.1.8", features=["derive"]}
dirs = "5.0.0"
rust-ini = "0.21.0"
thiserror = "1.0.39"
tokio = { version = "^1.26", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # remove dead code and often times reduces binary size
